CORE-2649 - Fixed vertical scrollbar not visible in Firefox on long pages

--- a/css/containers.less
+++ b/css/containers.less
@@ -80,6 +80,7 @@ body {
         display: flex;
         flex-direction: row;
         flex-grow: 1;
+        height: 100%;
     }
 
     .main-container-inner {
